--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
   <!-- Favicon -->
   <link rel="shortcut icon" href="img/S&S_letras.png" type="image/x-icon">
+  <!-- Material Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
 
-  <section>
-    <div class="skewed skewed--shadow"></div>
-  </section>
+  <div class="skewed skewed--shadow"></div>
 
   <nav class="nav container">
     <img class="nav__img" src="img/S&S_letras.png" alt="Logo">
@@ -30,7 +30,7 @@
       <ul class="nav__menu-list">
 
         <li class="nav__menu-item">
-          <a href="#"  class="nav__link">Servicios
+          <a href="#" class="nav__link">Servicios
           </a>
         </li>
 
@@ -52,17 +52,34 @@
   </nav>
 
   <main class="main">
-    <section class="main__grid">
+    <section class="main__banner">
 
       <article class="main__article">
 
         <div class="main__texts">
-          <h1 class="main__title">Make remote work</h1>
+          <h1 class="main__title">SERVICIO Y SOLUCIONES TI</h1>
           <p class="main__paragraph">
-            Get your team in sync with our remote work solution. Stremline processes, manage projects
+            Soluciones simples a problemas complejos, confía en nosotros.
           </p>
-          <a href="#" class="main__cta">Learn more</a>
+          <a href="#" class="main__cta"><span class="material-icons main__cta--icon">phone</span>Llámanos</a>
         </div>
+      </article>
+
+    </section>
+
+    <section class="main__quality--grid">
+      <h2> NUESTRAS CUALIDADES</h2>
+
+      <article class="main__quality--items first">
+        <h3>Cualida 1</h3>
+      </article>
+
+      <article class="main__quality--items second">
+        <h3>Cualida 2</h3>
+      </article>
+
+      <article class="main__quality--items third">
+        <h3>Cualida 3</h3>
       </article>
 
     </section>
