--- a/index.html
+++ b/index.html
@@ -83,6 +83,31 @@
       </article>
 
     </section>
+
+    <section class="main__about">
+
+      <article class="main__about--items">
+        <h2>¿Quiénes somos?</h2>
+        <p>
+          Somos una empresa dedicada a la solución de problemas de TI.
+        </p>
+      </article>
+
+      <article class="main__about--items">
+        <h2>¿Qué hacemos?</h2>
+        <p>
+          Ofrecemos servicios de consultoría, mantenimiento y soporte técnico, así como soluciones de software a la medida.
+        </p>
+      </article>
+
+      <article class="main__about--items">
+        <h2>¿Por qué elegirnos?</h2>
+        <p>
+          Porque somos una empresa joven, dinámica y con un equipo de profesionales altamente capacitados.
+        </p>
+      </article>
+
+    </section>
   </main>
   <script src="./js/main.js"></script>
 </body>
