footer in progress

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </nav>
 
   <main class="main">
-    <section class="main__banner">
+    <section class="main__banner" id="banner">
 
       <article class="main__article">
 
@@ -71,15 +71,18 @@
       <h2> NUESTRAS CUALIDADES</h2>
 
       <article class="main__quality--items first">
-        <h3>Cualida 1</h3>
+        <p>🔷<span>Cualificados y Capacitados </span>para proporcionar soluciones a los problemas de TI.
+        </p>
       </article>
 
       <article class="main__quality--items second">
-        <h3>Cualida 2</h3>
+        <p>🔷<span>Flexibilidad </span>para proporcionar soluciones personalizadas que se ajusten a sus necesidades.
+        </p>
       </article>
 
       <article class="main__quality--items third">
-        <h3>Cualida 3</h3>
+        <p>🔷<span>compromiso </span>con la resolución rápida y eficiente de cualquier problema o duda que puedan tener.
+        </p>
       </article>
 
     </section>
@@ -96,7 +99,8 @@
       <article class="main__about--items">
         <h2>¿Qué hacemos?</h2>
         <p>
-          Ofrecemos servicios de consultoría, mantenimiento y soporte técnico, así como soluciones de software a la medida.
+          Ofrecemos servicios de consultoría, mantenimiento y soporte técnico, así como soluciones de software a la
+          medida.
         </p>
       </article>
 
@@ -109,7 +113,35 @@
 
     </section>
   </main>
-  <script src="./js/main.js"></script>
+
+  <footer class="footer">
+    <div class="footer__row">
+      <div class="footer__row--items">
+        <ul class="footer-nav">
+          <h4>Acerca de</h4>
+          <li><a href="#banner">About Us</a></li>
+          <li><a href="#">Shipping Information</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms Of Service</a></li>
+        </ul>
+      </div>
+      <br>
+      <div class="footer__row--items">
+        <div class="footer-contact">
+          <h4>Contact Us</h4>
+          <p>
+            <span class="material-icons footer__row--icon">phone</span>
+            <a href="tel:+34666666666">666 666 666</a>
+          </p>
+          <p>
+            <span class="material-icons footer__row--icon">email</span>
+            <a href="mailto:">
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src=" ./js/main.js"></script>
+
 </body>
 
 </html>
