--- a/index.html
+++ b/index.html
@@ -130,8 +130,12 @@
         <div class="footer-contact">
           <h4>Contact Us</h4>
           <p>
+            <span class="material-icons footer__row--icon">schedule</span>
+            Lun-Sáb 9AM-7PM
+          </p>
+          <p>
             <span class="material-icons footer__row--icon">phone</span>
-            <a href="tel:+34666666666">666 666 666</a>
+            <a href="tel:+573208379838">320 837 9838</a>
           </p>
           <p>
             <span class="material-icons footer__row--icon">email</span>
