--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <!-- Slides -->
       <div class="carousel__services-card carousel__services-card--show" data-id="1">
         <div class="card-img">
-          <img src="../img/camara-seguridad.png" alt="Sistemas de Seguridad">
+          <img src="./img/camara-seguridad.png" alt="Sistemas de Seguridad">
         </div>
         <div class="card-info">
           <h3>Sistemas de Seguridad</h3>
@@ -84,7 +84,7 @@
 
       <div class="carousel__services-card" data-id="2">
         <div class="card-img">
-          <img src="../img/soporte-tecnico.png" alt="Soporte Técnico de equipo y sistemas">
+          <img src="./img/soporte-tecnico.png" alt="Soporte Técnico de equipo y sistemas">
         </div>
         <div class="card-info">
           <h3>Soporte técnico</h3>
@@ -94,7 +94,7 @@
 
       <div class="carousel__services-card" data-id="3">
         <div class="card-img">
-          <img src="../img/cableadoEstrucuradoAnimado.png" alt="Cableado estructurado, redes,telecomunicaciones">
+          <img src="./img/cableadoEstrucuradoAnimado.png" alt="Cableado estructurado, redes,telecomunicaciones">
         </div>
         <div class="card-info">
           <h3>Diseño de redes</h3>
@@ -104,7 +104,7 @@
 
       <div class="carousel__services-card" data-id="4">
         <div class="card-img">
-          <img src="../img/consultoria.png" alt="Consultoría TI">
+          <img src="./img/consultoria.png" alt="Consultoría TI">
         </div>
         <div class="card-info">
           <h3>Consultoría TI</h3>
