--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
 
     <!-- Slider main container -->
-    <div class="carousel__services">
+    <div class="carousel__services" id="service">
       <h2 class="carousel__title">TE OFRECEMOS...</h2>
       <!-- Slides -->
       <div class="carousel__services-card carousel__services-card--show" data-id="1">
@@ -174,7 +174,7 @@
           <h4>Acerca de</h4>
           <li><a href="#banner">Cualidades</a></li>
           <li><a href="#about">Conócenos</a></li>
-          <li><a href="#">Servicios</a></li>
+          <li><a href="#service">Servicios</a></li>
         </ul>
       </div>
       <br>
