tablet in progress view

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <ul class="nav__menu-list">
 
         <li class="nav__menu-item">
-          <a href="#banner" class="nav__link">Cualidades
+          <a href="#quality" class="nav__link">Cualidades
           </a>
         </li>
 
@@ -52,7 +52,7 @@
   </nav>
 
   <main class="main">
-    <section class="main__banner" id="banner">
+    <section class="main__banner">
 
       <article class="main__article">
 
@@ -114,7 +114,7 @@
 
     </div>
 
-    <section class="main__quality-grid">
+    <section class="main__quality-grid" id="quality">
 
       <h2> NUESTRAS CUALIDADES</h2>
 
@@ -169,16 +169,16 @@
 
   <footer class="footer">
     <div class="footer__row">
-      <div class="footer__row-items">
+      <div class="footer__row-items footer-about">
         <ul class="footer-nav">
           <h4>Acerca de</h4>
-          <li><a href="#banner">Cualidades</a></li>
+          <li><a href="#quality">Cualidades</a></li>
           <li><a href="#about">Conócenos</a></li>
           <li><a href="#service">Servicios</a></li>
         </ul>
       </div>
       <br>
-      <div class="footer__row-items">
+      <div class="footer__row-items footer__row-items-contact">
         <div class="footer-contact" id="contact">
           <h4>Contáctenos</h4>
           <p>
